chore: Add class names to the image on the left & right of the screen

--- a/gallery.html
+++ b/gallery.html
@@ -14,7 +14,7 @@
         <div class="gallery__container">
             <div class="left__container">
                 <div class="image__wrapper">
-                    <img src="./assets/images/1 (2).webp" alt="">
+                    <img src="./assets/images/1 (2).webp" alt="" class="left__image">
                 </div>
 
                 <div class="image__description">
@@ -26,7 +26,7 @@
 
             <div class="right__container">
                 <div class="image__wrapper">
-                    <img src="./assets/images/1 (6).webp" alt="">
+                    <img src="./assets/images/1 (6).webp" alt="" class="right__image">
                 </div>
 
                 <div class="image__description">
@@ -45,6 +45,6 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/CustomEase.min.js"></script>
-    <script src="./script.js"></script>
+    <script src="./script.js"></script> 
 </body>
 </html>
