chore: Add new class names to the left and right img tag

--- a/gallery.html
+++ b/gallery.html
@@ -13,8 +13,8 @@
     <main class="gallery__wrapper">
         <div class="gallery__container">
             <div class="left__container">
-                <div class="image__wrapper">
-                    <img src="./assets/images/1 (2).webp" alt="" class="left__image">
+                <div class="image__wrapper left__image--wrapper" id="left-image">
+
                 </div>
 
                 <div class="image__description">
@@ -25,7 +25,7 @@
             </div>
 
             <div class="right__container">
-                <div class="image__wrapper">
+                <div class="image__wrapper" id="right-image">
                     <img src="./assets/images/1 (6).webp" alt="" class="right__image">
                 </div>
 
