chore: Remove the images in the left and right image wrapper and add new class name for js selector

--- a/gallery.html
+++ b/gallery.html
@@ -13,9 +13,7 @@
     <main class="gallery__wrapper">
         <div class="gallery__container">
             <div class="left__container">
-                <div class="image__wrapper left__image--wrapper" id="left-image">
-
-                </div>
+                <div class="image__wrapper left__image--wrapper" id="left-image"></div>
 
                 <div class="image__description">
                     <p class="description__text">lein spring 2019</p>
@@ -25,9 +23,7 @@
             </div>
 
             <div class="right__container">
-                <div class="image__wrapper" id="right-image">
-                    <img src="./assets/images/1 (6).webp" alt="" class="right__image">
-                </div>
+                <div class="image__wrapper" id="right-image"></div>
 
                 <div class="image__description">
                     <p class="description__text">vogue runway</p>
