--- a/gallery.html
+++ b/gallery.html
@@ -8,14 +8,16 @@
 
     <title>Gallery Interaction Concept</title>
 </head>
-<body>
+<body data-barba="wrapper">
+
+    <div class="transition__overlay"></div>
     
-    <main class="gallery__wrapper">
+    <main class="gallery__wrapper" data-barba="container" data-barba-namespace="gallery-page">
         <div class="gallery__container">
             <div class="left__container">
                 <div class="image__wrapper left__image--wrapper" id="left-image"></div>
 
-                <div class="image__description">
+                <div class="image__description" id="gallery-text">
                     <p class="description__text">lein spring 2019</p>
                     <p class="description__text">ready to wear /</p>
                     <p class="description__text">fashion show</p>
@@ -26,12 +28,12 @@
                 <div class="image__wrapper" id="right-image"></div>
 
                 <div class="image__description">
-                    <p class="description__text">vogue runway</p>
+                    <p class="description__text" id="gallery-text">vogue runway</p>
                 </div>
             </div>
         </div>
 
-        <div class="nav__btns">
+        <div class="nav__btns" id="gallery-text">
             <button class="prev__btn">prev</button>
             <span class="nav__divider">/</span>
             <button class="next__btn">next</button>
@@ -41,90 +43,7 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/CustomEase.min.js"></script>
-    <script>
-        // Image Gallery Carousel (GALLERY PAGE)
-        const prevBtn = document.querySelector(".prev__btn");
-        const nextBtn = document.querySelector(".next__btn");
-
-        let leftImage = document.querySelector(".left__image");
-        let rightImage = document.querySelector(".right__image");
-
-        let i = 1;
-
-        // Create images inside the left gallery wrapper
-        const leftImageWrapper = document.querySelector("#left-image");
-
-        for (let i = 1; i < 5; i++) {
-            const imageTag = document.createElement("img");
-
-            imageTag.classList.add("new-image");
-
-            imageTag.src = `assets/images/1%20(${i}).webp`
-
-            leftImageWrapper.appendChild(imageTag);
-        }
-
-
-        // Create images inside the right gallery wrapper
-        const rightImageWrapper = document.querySelector("#right-image");
-
-        for (let i = 6; i < 10; i++) {
-            const imageTag = document.createElement("img");
-
-            imageTag.classList.add("new-image-right");
-
-            imageTag.src = `assets/images/1%20(${i}).webp`
-
-            rightImageWrapper.appendChild(imageTag);
-        }
-
-
-        nextBtn.addEventListener("click", () => {
-            let lastChild = document.querySelector(".new-image:last-child");
-            let secondToLastChild = document.querySelector(".new-image:nth-last-child(2)");
-
-            let rightlastChild = document.querySelector(".new-image-right:last-child");
-            let rightsecondToLastChild = document.querySelector(".new-image-right:nth-last-child(2)");
-
-            
-            lastChild.style.animation = "slide-left 0.4s ease-in forwards";
-            secondToLastChild.style.animation = "scale-up 0.4s ease-in forwards";
-
-            rightlastChild.style.animation = "slide-left 0.4s ease-in forwards";
-            rightsecondToLastChild.style.animation = "scale-up 0.4s ease-in forwards";
-
-            setTimeout(() => {
-                lastChild.style.animation = "";
-                secondToLastChild.style.animation = "";
-
-                rightlastChild.style.animation = "";
-                rightsecondToLastChild.style.animation = "";
-
-                leftImageWrapper.prepend(lastChild);
-                rightImageWrapper.prepend(rightlastChild);
-            }, 400);
-        });
-
-
-        prevBtn.addEventListener("click", () => {
-            let lastChild = document.querySelector(".new-image:first-child");
-            let rightlastChild = document.querySelector(".new-image-right:first-child");
-
-            gsap.timeline()
-            .set([lastChild, rightlastChild], {
-                x: -500,
-                clipPath: "polygon(0 0, 0 0, 0 100%, 0% 100%)",
-                onComplete: () => {
-                    leftImageWrapper.append(lastChild);
-                    rightImageWrapper.append(rightlastChild);
-                }
-            })
-            .to([lastChild, rightlastChild], {
-                x: 0,
-                duration: 0.6,
-                clipPath: "polygon(0 0, 100% 0, 100% 100%, 0% 100%)",
-            })
-        });
-    </script>
+    <script src="https://cdn.jsdelivr.net/npm/@barba/core"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
