chore: Add the appropriate link for the gallery image and add alt texts to all gallery images

--- a/index.html
+++ b/index.html
@@ -16,168 +16,168 @@
         <div class="images">
             <div class="image__container">
                 <a href="#" class="image__container--image">
-                    <img src="./assets/images/1 (1).webp" alt="">
+                    <img src="./assets/images/1 (1).webp" alt="preview image for image carousel">
                 </a>
                 <p class="images__container--number">01</p>
             </div>
 
             <div class="image__container">
                 <a href="#" class="image__container--image">
-                    <img src="./assets/images/1 (2).webp" alt="">
+                    <img src="./assets/images/1 (2).webp" alt="preview image for image carousel">
                 </a>
                 <p class="images__container--number">02</p>
             </div>
 
             <div class="image__container">
                 <a href="#" class="image__container--image">
-                    <img src="./assets/images/1 (3).webp" alt="">
+                    <img src="./assets/images/1 (3).webp" alt="preview image for image carousel">
                 </a>
                 <p class="images__container--number">03</p>
             </div>
 
             <div class="image__container">
-                <a href="#" class="image__container--image">
-                    <img src="./assets/images/1 (7).webp" alt="">
+                <a href="gallery.html" class="image__container--image">
+                    <img src="./assets/images/1 (7).webp" alt="preview image for image carousel">
                 </a>
                 <p class="images__container--number">04</p>
             </div>
 
             <div class="image__container">
                 <a href="#" class="image__container--image">
-                    <img src="./assets/images/1 (5).webp" alt="">
+                    <img src="./assets/images/1 (5).webp" alt="preview image for image carousel">
                 </a>
                 <p class="images__container--number">05</p>
             </div>
 
             <div class="image__container">
                 <a href="#" class="image__container--image">
-                    <img src="./assets/images/1 (6).webp" alt="">
+                    <img src="./assets/images/1 (6).webp" alt="preview image for image carousel">
                 </a>
                 <p class="images__container--number">06</p>
             </div>
 
             <div class="image__container">
                 <a href="#" class="image__container--image">
-                    <img src="./assets/images/1 (4).webp" alt="">
+                    <img src="./assets/images/1 (4).webp" alt="preview image for image carousel">
                 </a>
                 <p class="images__container--number">07</p>
             </div>
 
             <div class="image__container">
                 <a href="#" class="image__container--image">
-                    <img src="./assets/images/1 (8).webp" alt="">
+                    <img src="./assets/images/1 (8).webp" alt="preview image for image carousel">
                 </a>
                 <p class="images__container--number">08</p>
             </div>
 
             <div class="image__container">
                 <a href="#" class="image__container--image">
-                    <img src="./assets/images/1 (9).webp" alt="">
+                    <img src="./assets/images/1 (9).webp" alt="preview image for image carousel">
                 </a>
                 <p class="images__container--number">09</p>
             </div>
 
             <div class="image__container">
                 <a href="#" class="image__container--image">
-                    <img src="./assets/images/1 (10).webp" alt="">
+                    <img src="./assets/images/1 (10).webp" alt="preview image for image carousel">
                 </a>
                 <p class="images__container--number">10</p>
             </div>
 
             <div class="image__container">
                 <a href="#" class="image__container--image">
-                    <img src="./assets/images/1 (11).webp" alt="">
+                    <img src="./assets/images/1 (11).webp" alt="preview image for image carousel">
                 </a>
                 <p class="images__container--number">11</p>
             </div>
 
             <div class="image__container">
                 <a href="#" class="image__container--image">
-                    <img src="./assets/images/1 (12).webp" alt="">
+                    <img src="./assets/images/1 (12).webp" alt="preview image for image carousel">
                 </a>
                 <p class="images__container--number">12</p>
             </div>
 
             <div class="image__container">
                 <a href="#" class="image__container--image">
-                    <img src="./assets/images/1 (13).webp" alt="">
+                    <img src="./assets/images/1 (13).webp" alt="preview image for image carousel">
                 </a>
                 <p class="images__container--number">13</p>
             </div>
 
             <div class="image__container">
                 <a href="#" class="image__container--image">
-                    <img src="./assets/images/1 (14).webp" alt="">
+                    <img src="./assets/images/1 (14).webp" alt="preview image for image carousel">
                 </a>
                 <p class="images__container--number">14</p>
             </div>
 
             <div class="image__container">
                 <a href="#" class="image__container--image">
-                    <img src="./assets/images/1 (15).webp" alt="">
+                    <img src="./assets/images/1 (15).webp" alt="preview image for image carousel">
                 </a>
                 <p class="images__container--number">15</p>
             </div>
 
             <div class="image__container">
                 <a href="#" class="image__container--image">
-                    <img src="./assets/images/1 (16).webp" alt="">
+                    <img src="./assets/images/1 (16).webp" alt="preview image for image carousel">
                 </a>
                 <p class="images__container--number">16</p>
             </div>
 
             <div class="image__container">
                 <a href="#" class="image__container--image">
-                    <img src="./assets/images/1 (17).webp" alt="">
+                    <img src="./assets/images/1 (17).webp" alt="preview image for image carousel">
                 </a>
                 <p class="images__container--number">17</p>
             </div>
 
             <div class="image__container">
                 <a href="#" class="image__container--image">
-                    <img src="./assets/images/1 (18).webp" alt="">
+                    <img src="./assets/images/1 (18).webp" alt="preview image for image carousel">
                 </a>
                 <p class="images__container--number">18</p>
             </div>
 
             <div class="image__container">
                 <a href="#" class="image__container--image">
-                    <img src="./assets/images/1 (19).webp" alt="">
+                    <img src="./assets/images/1 (19).webp" alt="preview image for image carousel">
                 </a>
                 <p class="images__container--number">19</p>
             </div>
 
             <div class="image__container">
                 <a href="#" class="image__container--image">
-                    <img src="./assets/images/1 (20).webp" alt="">
+                    <img src="./assets/images/1 (20).webp" alt="preview image for image carousel">
                 </a>
                 <p class="images__container--number">20</p>
             </div>
 
             <div class="image__container">
                 <a href="#" class="image__container--image">
-                    <img src="./assets/images/1 (21).webp" alt="">
+                    <img src="./assets/images/1 (21).webp" alt="preview image for image carousel">
                 </a>
                 <p class="images__container--number">21</p>
             </div>
 
             <div class="image__container">
                 <a href="#" class="image__container--image">
-                    <img src="./assets/images/1 (22).webp" alt="">
+                    <img src="./assets/images/1 (22).webp" alt="preview image for image carousel">
                 </a>
                 <p class="images__container--number">22</p>
             </div>
 
             <div class="image__container">
                 <a href="#" class="image__container--image">
-                    <img src="./assets/images/1 (23).webp" alt="">
+                    <img src="./assets/images/1 (23).webp" alt="preview image for image carousel">
                 </a>
                 <p class="images__container--number">23</p>
             </div>
 
             <div class="image__container">
                 <a href="#" class="image__container--image">
-                    <img src="./assets/images/1 (24).webp" alt="">
+                    <img src="./assets/images/1 (24).webp" alt="preview image for image carousel">
                 </a>
                 <p class="images__container--number">24</p>
             </div>
@@ -185,7 +185,7 @@
 
         <nav class="navigation">
             <ul class="navigation__list">
-                <li class="navigation__list--item"><a href="gallery.html">artists</a></li>
+                <li class="navigation__list--item"><a href="#">artists</a></li>
                 <li class="navigation__list--item"><a href="#">artworks</a></li>
                 <li class="navigation__list--item"><a href="#">gallery</a></li>
                 <li class="navigation__list--item"><a href="#">editorial</a></li>
